# analise2024

./: .gitignore  analise.ipynb  app.py  pyproject.toml  readme
